# frcobot_ros

./: .gitignore  README.md  TODO.md
docs/: tst.md
fr10_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
fr10_moveit_config/config/: FR10-V5.0.SLDASM.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  real_controllers.yaml  ros_controllers.yaml
fr10_moveit_config/launch/: FR10-V5.0.SLDASM_moveit_controller_manager.launch.xml  default_warehouse_db.launch  demo_gazebo.launch  demo_hardware.launch  demo_simulation.launch  gazebo.launch  move_group.launch  moveit_camera.rviz  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
fr10_moveit_config/launch/gazebo/: FR10-V5.0.SLDASM_moveit_sensor_manager.launch.xml  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  pilz_industrial_motion_planner_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml  warehouse.launch
fr10_moveit_config/launch/hardware/: FR10-V5.0.SLDASM_moveit_controller_manager.launch.xml  demo_hardware.launch  demo_simulation.launch  gazebo.launch  move_group.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml
fr10_moveit_config/scripts/: gripper_control.py  joint_motion.py  move_group_test.py  update_frame_id.py
fr10_moveit_config/src/: gazebo_rh_pub.cpp
frcobot_camera/: CMakeLists.txt  package.xml
frcobot_camera/config/: binPicking.yaml
frcobot_camera/include/frcobot_camera/: FRRobot.h  RobotError.h  RobotTypes.h  frcobot_rvs.h
frcobot_camera/launch/: frcobot_binpicking.launch  frcobot_eyeinhand.launch
frcobot_camera/lib/: libxmlrpc.so.3
frcobot_camera/src/: binPicking.cpp  eyeinhand.cpp
frcobot_description/: CMakeLists.txt  package.xml
frcobot_description/launch/: fr10robot_rviz.launch  fr3robot_rviz.launch  fr3v5_rviz.launch  fr5robot_rviz.launch  fr5v6_rviz.launch
frcobot_description/meshes/fr10/collision/: base_link.STL  forearm_Link.STL  shoulder_Link.STL  upperarm_Link.STL  wrist1_Link.STL  wrist2_Link.STL  wrist2_Link_correct.stl  wrist3_Link.STL  wrist3_Link_correct.stl
frcobot_description/meshes/fr10/visual/: base_link.DAE  shoulder_Link.DAE  wrist1_Link.DAE  wrist2_Link.DAE  wrist3_Link.DAE
frcobot_description/meshes/fr10v6/collision/: base_link.STL  j1_Link.STL  j2_Link.STL  j3_Link.STL  j4_Link.STL  j5_Link.STL  j6_Link.STL
frcobot_description/meshes/fr10v6/visual/: base_link.DAE  j1_Link.DAE  j3_Link.DAE  j4_Link.DAE  j5_Link.DAE  j6_Link.DAE
frcobot_description/meshes/fr3/collision/: base_link.STL  forearm_Link.STL  shoulder_Link.STL  upperarm_Link.STL  wrist1_Link.STL  wrist2_Link.STL  wrist3_Link.STL
frcobot_description/meshes/fr3/visual/: base_link.DAE  wrist1_Link.DAE  wrist2_Link.DAE  wrist3_Link.DAE
frcobot_description/meshes/fr3v5/collision/: base_link.STL  wrist1_Link.STL  wrist3_Link.STL
frcobot_description/meshes/fr3v5/visual/: forearm_Link.STL  shoulder_Link.STL  tool_Link.STL  upperarm_Link.STL  wrist2_Link.STL
frcobot_description/meshes/fr3v6/collision/: base_link.STL  j1_Link.STL  j2_Link.STL  j3_Link.STL  j4_Link.STL  j5_Link.STL  j6_Link.STL
frcobot_description/urdf/: fr10_gazebo.urdf  fr10_robot.urdf  fr10v6.urdf  fr10v6_gazebo.urdf  fr3_gazebo.urdf  fr3_robot.urdf  fr3v5.urdf  fr3v5_gazebo.urdf  fr3v6.urdf  fr3v6_gazebo.urdf  fr5_gazebo.urdf  fr5_robot.urdf  fr5v6.urdf  fr5v6_gazebo.urdf
frcobot_gripper/: CMakeLists.txt  package.xml  plugin_description.xml  readme.md
frcobot_gripper/include/frcobot_gripper/: FRRobot.h  RobotError.h  gripper_io_pad.h
frcobot_gripper/lib/: libxmlrpc_client.so.3.54
frcobot_gripper/src/: gripper_io_pad.cpp
frcobot_gripper/test/: gripper_plugin_test.cpp
moveit_python/: .gitignore  CMakeLists.txt  README.md  package.xml
moveit_python/docs/: old readme.md
moveit_python/legacy/: README.md  move_group_python_interface_tutorial.py
moveit_python/scripts/: add_box.py  attach_box.py  backward_k.py  dump_planning_scene.py  load_planning_scene.py  remove_objects.py
moveit_python/src/moveit_python/: move_group_interface.py  planning_scene_interface.py
moveit_python/src/task_constructor/: sim2real_converter.py  task_checker.py  task_executer.py  task_executer_json.py  task_generator.py  task_observer.py
moveit_python/tasks/fr10/: task_grip_real.json  task_grip_sim.json  task_move_real.json  task_move_sim.json
moveit_python/tasks/fr3/: task_move_sim.json
ros_control_boilerplate/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
ros_control_boilerplate/frrobot_control/: CMakeLists.txt  package.xml
ros_control_boilerplate/frrobot_control/config/: frrobot_controllers.yaml
ros_control_boilerplate/frrobot_control/launch/: fr10_hardware.launch  fr10_simulation.launch  fr10v6_hardware.launch  fr10v6_simulation.launch  fr3_hardware.launch  fr3_simulation.launch  fr3v5_hardware.launch  fr3v5_simulation.launch  fr3v6_hardware.launch  fr3v6_simulation.launch  fr5_hardware.launch  fr5_simulation.launch  fr5v6_hardware.launch  fr5v6_simulation.launch  frrobot_hardware_cs.launch  frrobot_test_trajectory.launch  frrobot_visualize.launch
ros_control_boilerplate/frrobot_control/src/: frrobot_hw_interface.cpp  frrobot_hw_main.cpp  tool.cpp
ros_control_boilerplate/include/ros_control_boilerplate/: generic_hw_control_loop.h  generic_hw_interface.h  sim_hw_interface.h
ros_control_boilerplate/msg/: poscmd.msg  statefb.msg
ros_control_boilerplate/src/: generic_hw_control_loop.cpp  generic_hw_interface.cpp  sim_hw_interface.cpp  sim_hw_main.cpp
ros_control_boilerplate/src/tools/: keyboard_teleop.cpp  test_trajectory.cpp
(+271 files in other folders)
