<?xml version="1.0"?>
<package format="2">
  <name>ros_control_boilerplate</name>
  <version>0.5.0</version>
  <description>Simple simulation interface and template for setting up a hardware interface for ros_control</description>

  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/davetcoleman/ros_control_boilerplate</url>
  <url type="butracker">https://github.com/davetcoleman/ros_control_boilerplate/issues</url>
  <url type="repository">https://github.com/davetcoleman/ros_control_boilerplate/</url>

  <author email="davetcoleman@gmail.com">Dave Coleman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>hardware_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>libgflags-dev</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rosparam_shortcuts</build_depend>
  <depend>message_generation</depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>joint_limits_interface</exec_depend>
  <exec_depend>transmission_interface</exec_depend>
  <exec_depend>control_toolbox</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rosparam_shortcuts</exec_depend>

  <export>
  </export>
</package>
